# retrainability-index

./: .gitattributes  .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
app/: Dockerfile  requirements.txt  streamlit_app.py
data/processed/: index_tier1.csv  index_tier2.csv  index_tier2.parquet  occupations.csv  rti_by_industry.csv  rti_by_occupation.csv  sample_data_100_percent.parquet  wioa_data_10_percent.csv  wioa_data_tier2.parquet  workforce_boards.csv
notebooks/: analyze_index_data.ipynb  exploratory_analysis.ipynb  index_by_age.json  index_by_state.json  index_by_state_received_training.json  index_by_subsector.json  index_by_training_service.json  methodology.ipynb  paper_stats_tables_and_figures.ipynb
scripts/: analyze_index_data.ipynb  compute_rti_by_industry.py  create_index.ipynb  create_index.py  create_occupations.py  create_wioa_data.ipynb  create_wioa_data.py  create_workforce_boards.ipynb  create_workforce_boards.py  process_wioa_data.ipynb  sample_wioa_records.py
src/:  __init__.py  home.py  page1.py  page2.py  streamlit_app.py
src/pipeline/extract/: fetchers.py  readers.py
src/pipeline/load/: writers.py
src/pipeline/run/: pipeline_consumer_price_index.py  pipeline_industries.py  pipeline_ipw_weights.py  (+5 more)
src/retainability_index.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_transform_workforce_development_boards.py
tests/extract/: test_fetchers.py  test_readers.py
tests/transform/: test_inverse_probability_weights.py  test_occupations.py  test_workforce_development_boards.py
(+8 files in other folders)
