[project]
name = "retainability-index"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datacommons-client>=2.1.1",
    "db-dtypes>=1.4.3",
    "google-cloud-bigquery>=3.35.1",
    "google-cloud-bigquery-storage>=2.32.0",
    "ipykernel>=6.30.0",
    "openpyxl>=3.1.5",
    "plotly>=6.2.0",
    "polars>=1.31.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "streamlit>=1.47.0",
]
